; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_closedir.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_closedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct._reent = type { i32 }

@EBADF = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @closedir(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct._reent*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32* @get_vfs_for_index(i32 %9)
  store i32* %10, i32** %4, align 8
  %11 = call %struct._reent* (...) @__getreent()
  store %struct._reent* %11, %struct._reent** %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @EBADF, align 4
  store i32 %15, i32* @errno, align 4
  store i32 -1, i32* %2, align 4
  br label %23

16:                                               ; preds = %1
  %17 = load i32, i32* %6, align 4
  %18 = load %struct._reent*, %struct._reent** %5, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = call i32 @CHECK_AND_CALL(i32 %17, %struct._reent* %18, i32* %19, i32 (%struct.TYPE_5__*)* @closedir, %struct.TYPE_5__* %20)
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %16, %14
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32* @get_vfs_for_index(i32) #1

declare dso_local %struct._reent* @__getreent(...) #1

declare dso_local i32 @CHECK_AND_CALL(i32, %struct._reent*, i32*, i32 (%struct.TYPE_5__*)*, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
